Added Main program Changed license Fixed some errors with EWC1 Modified code style